deploy/testing/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kaztube-${BRANCH_NAME}
  labels:
    project: kaztube-${BRANCH_NAME}
    env: testing
    branch: ${BRANCH_NAME}
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 80
    - name: mysql
      port: 3306
    - name: phpmyadmin
      port: 8080
  selector:
    project: kaztube-${BRANCH_NAME}
